maze.shortestpath.ShortestPathMaze.scala.error
Erreur de compilation :
ShortestPathMaze:26: error: not found: value i
      setIndication(i,j,compteur+1);
                    ^ShortestPathMaze:26: error: not found: value j
      setIndication(i,j,compteur+1);
                      ^ShortestPathMaze:31: error: not found: value i
        setIndication(i,j,compteur+1);
                      ^ShortestPathMaze:31: error: not found: value j
        setIndication(i,j,compteur+1);
                        ^